# claude-code-skills

./: .gitignore  README.md
.claude/: settings.local.json
Plans/: memoized-snuggling-lark.md
docs/: references.md
scripts/: install-skills.sh  link-skills.sh
skills/1password/: SKILL.md
skills/1password-skill/: SKILL.md
skills/1password-skill/tools-python/: README.md  pyproject.toml
skills/1password-skill/tools-python/src/op_env/: __init__.py  op_env_create.py  op_env_delete.py  op_env_export.py  op_env_list.py  op_env_show.py  op_env_update.py  secrets_manager.py  utils.py
skills/Git-skill/: SKILL.md
skills/alz-accelerator-skill/: SKILL.md
skills/argocd-application-install-skill/: ClusterInventory.md  SKILL.md
skills/argocd-applicationset-skill/: SKILL.md
skills/argocd-command-skill/: SKILL.md
skills/argocd-review-skill/: SKILL.md
skills/argocd-skill/: SKILL.md
skills/atuin-skill/: SKILL.md
skills/aztfexport-skill/: SKILL.md
skills/azure-devops-skill/: SKILL.md
skills/azure-devops-wiki-skill/: SKILL.md
skills/azure-finops-skill/: AzureToolReference.md  PricingComparison.md  ReservationInventory.md  SKILL.md
skills/azure-landing-zone-checklist-skill/: SKILL.md
skills/azure-network-calculator-skill/: CidrMasterAllocation.md  SKILL.md  SubnetTemplates.md  TerraformSnippets.md
skills/azure-pim/: README.md
skills/azure-pim-skill/: pyproject.toml
skills/azure-pim-skill/examples/: workflow_automation.yaml
skills/azure-pim-skill/src/azure_pim/: __init__.py  cli.py
skills/azure-pim-skill/src/azure_pim/clients/: graph.py
skills/azure-pim-skill/src/azure_pim/models/: __init__.py  azure_rbac.py  common.py
skills/azure-pim-skill/src/azure_pim/operations/: pim.py
skills/azure-pim-skill/tests/: test_config.py
skills/bmad-orchestrate-skill/: DependencyPatterns.md  SKILL.md
skills/cloudflare-dns-skill/: SKILL.md
skills/commit-skill/: SKILL.md
skills/container-security-skill/: SKILL.md
skills/content-curator-skill/: SKILL.md
skills/context7-skill/: SKILL.md
skills/daily-skill/: SKILL.md
skills/defectdojo-skill/: SKILL.md
skills/dependency-track-skill/: SKILL.md
skills/devops-network-calculator-for-azure-skill/: SKILL.md  workflow.md
skills/external-dns-skill/: SKILL.md
skills/file-intel-skill/: SKILL.md
skills/gitops-principles-skill/: SKILL.md
skills/grafana-skill/: SKILL.md
skills/justfile-skill/: SKILL.md
skills/k8s-clusters-skill/: SKILL.md
skills/kql-skill/: SKILL.md
skills/loki/: SKILL.md
skills/managing-infra-skill/: MAKEFILE.md
skills/merge-and-cleanup-skill/: SKILL.md
skills/merge-to-main-skill/: SKILL.md
skills/mimir/: SKILL.md
skills/mkdocs-skill/: SKILL.md
skills/notebooklm-skill/: SKILL.md
skills/obsidian-master-skill/: KnowledgeCapturePatterns.md  SKILL.md
skills/opentelemetry/: SKILL.md
skills/powerbi-skill/: SKILL.md
skills/pre-commit-skill/: ConfigurationGuide.md  HooksReference.md  QuickStartGuide.md  SKILL.md  SecurityHooks.md
skills/prometheus-skill/: SKILL.md
skills/robusta-dev-skill/: SKILL.md
skills/runbook-skill/: SKILL.md
skills/shellcheck-skill/: BestPractices.md  Configuration.md  ErrorCodes.md  Integration.md  SKILL.md
skills/teams-migration-skill/: SKILL.md
skills/tempo/: SKILL.md
skills/tldr-skill/: SKILL.md
skills/tmux-skill/: SKILL.md
skills/using-git-worktrees-skill/: SKILL.md  WORKFLOW.md
(+400 files in other folders)
