[project]
name = "op-env-tools"
version = "0.1.0"
description = "1Password Developer Environment management tools using the Python SDK"
requires-python = ">=3.9"
dependencies = [
    "onepassword-sdk>=0.1.7",
]

[project.scripts]
op-env-create = "op_env.op_env_create:main_sync"
op-env-list = "op_env.op_env_list:main_sync"
op-env-show = "op_env.op_env_show:main_sync"
op-env-update = "op_env.op_env_update:main_sync"
op-env-export = "op_env.op_env_export:main_sync"
op-env-delete = "op_env.op_env_delete:main_sync"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/op_env"]
